Fixed Scrollbar in iew

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-overflow-style: none;
-  scrollbar-width: none;
+  scrollbar-width: hidden;
   background-image: linear-gradient(to bottom, rgba(0,0,04,1) 0%, rgba(0,0,09,0.99) 50%, rgba(0,0,14,0.98) 100%);
 }
 
